<resources>
    <string name="app_name">Plants App</string>
    <string name="plants">Plants</string>
    <string name="plant_details">Plant Details</string>
    <string name="ipni">IPNI</string>
    <string name="ipni_status">Status:</string>
    <string name="family">Family:</string>
    <string name="index">Index: </string>
    <string name="author">Author:</string>
    <string name="click_here_for_more_info">Click here for more info</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name:</string>
    <string name="year">Year:</string>
</resources>