<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="plant"
            type="com.khaledamin.plantsapp.model.response.Plant" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/pale_yellow">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.plantsdetails.PlantDetailsFragment">

            <ImageView
                android:id="@+id/plant_image"
                imgUrl="@{plant.imageUrl}"
                android:layout_width="@dimen/zero_constraint"
                android:layout_height="@dimen/image_height"
                android:background="@color/dark_green"
                android:contentDescription="@{plant.commonName}"
                android:padding="@dimen/standard_dimen_half"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_plant_placeholder"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- common name -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/name_group"
                android:layout_width="@dimen/zero_constraint"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_dimen"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/plant_image">

                <TextView
                    android:id="@+id/plant_common_name_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/standard_dimen"
                    android:text="@string/name"
                    android:textAlignment="center"
                    android:textColor="@color/dark_green"
                    android:textSize="@dimen/subtitle_original_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/plant_common_name"
                    text="@{plant.commonName}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/standard_dimen"
                    android:fontFamily="@font/montserrat_semibold"
                    android:textColor="@color/green"
                    android:textSize="@dimen/subtitle_original_size"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/plant_common_name_label"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- family -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/family_group"
                android:layout_width="@dimen/zero_constraint"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_dimen"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_group">

                <TextView
                    android:id="@+id/plant_family_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/standard_dimen"
                    android:text="@string/family"
                    android:textAlignment="center"
                    android:textColor="@color/dark_green"
                    android:textSize="@dimen/subtitle_original_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/plant_family"
                    text="@{plant.family}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/standard_dimen"
                    android:textAlignment="textStart"
                    android:textColor="@color/green"
                    android:textSize="@dimen/title_original_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/plant_family_label"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- index -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/index_group"
                android:layout_width="@dimen/zero_constraint"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_dimen"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/family_group">

                <TextView
                    android:id="@+id/plant_index_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/index"
                    android:textAlignment="center"
                    android:layout_marginStart="@dimen/standard_dimen"
                    android:textColor="@color/dark_green"
                    android:textSize="@dimen/subtitle_original_size"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/plant_index"
                    text='@{String.format("%s\n%s",plant.bibliography,plant.scientificName)}'
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxWidth="@dimen/image_height"
                    android:maxLines="4"
                    android:layout_marginStart="@dimen/standard_dimen"
                    android:textAlignment="textStart"
                    android:textColor="@color/green"
                    android:textSize="@dimen/subtitle_original_size"
                    app:layout_constraintStart_toEndOf="@id/plant_index_label"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- author -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/author_group"
                android:layout_width="@dimen/zero_constraint"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_dimen"
                app:layout_constraintTop_toBottomOf="@id/index_group"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/author_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/author"
                    android:layout_marginStart="@dimen/standard_dimen"
                    android:textAlignment="center"
                    android:textColor="@color/dark_green"
                    android:textSize="@dimen/subtitle_original_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/author"
                    text="@{plant.author}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/standard_dimen"
                    android:textAlignment="textStart"
                    android:textColor="@color/green"
                    android:textSize="@dimen/subtitle_original_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/author_label"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <Button
                android:id="@+id/more_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dark_green"
                android:text="@string/click_here_for_more_info"
                android:textAllCaps="true"
                android:layout_margin="@dimen/standard_dimen"
                android:textColor="@color/yellow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/author_group" />

            <WebView
                android:id="@+id/webView"
                android:layout_width="@dimen/zero_constraint"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/more_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>